@@ -615,6 +615,10 @@ fully support the editing toolbar, but was found to be too confusing.
 * Blocking some Unicode whitespace characters in usernames. Should check
   if some or all should be blocked from all page titles.
 * Unknown log types no longer throw notices everywhere in RecentChanges
+* (bug 4502, 5017) Don't render potentially hostile deleted page contents
+  on Special:Undelete by default; show source, with an optional preview.
+  The revisions list no longer shows the latest text by default, so it can
+  still be operated if the text is hostile.
 
 
 === Caveats ===
